--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-slate
+
+title: ASA After School Activities
+description: Programming and robotics at AISVN
+
+show_downloads: true
