--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ title: ASA After School Activities
 description: Programming and robotics at AISVN
 
 show_downloads: true
+
+github:
+  zip_url: https://github.com/kreier/asa/blob/master/bluetooth-robot_Android.ino
+  another_url: https://github.com/kreier/asa/blob/master/documents/robot_2019-11-05.ino
